--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Boku no Hero Academia Theme/Inspiration/
 Boku no Hero Academia Theme/Behind the Scenes Resources
 Boku no Hero Academia Theme/Temp/
 Boku no Hero Academia Theme/Resources.txt
+Log Horizon Theme/
+Boku no Hero Academia Theme/Mockup.psd
