--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
+Clarity Theme/Images/
 Boku no Hero Academia Theme/Inspiration/
 Boku no Hero Academia Theme/Behind the Scenes Resources
 Boku no Hero Academia Theme/Temp/
 Boku no Hero Academia Theme/Resources.txt
-Log Horizon Theme/
 Boku no Hero Academia Theme/Mockup.psd
+Log Horizon Theme/
