--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+*/Resources.txt
 Clarity Theme/Images/
 Boku no Hero Academia Theme/Inspiration/
 Boku no Hero Academia Theme/Behind the Scenes Resources
 Boku no Hero Academia Theme/Temp/
-Boku no Hero Academia Theme/Resources.txt
 Boku no Hero Academia Theme/Mockup.psd
 Log Horizon Theme/
