--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Boku no Hero Academia Theme/Behind the Scenes Resources
 Boku no Hero Academia Theme/Temp/
 Boku no Hero Academia Theme/Mockup.psd
 Log Horizon Theme/
+Clarity Theme/Mod - *.txt
