--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 */Resources.txt
 Clarity Theme/Images/
-Boku no Hero Academia Theme/Inspiration/
-Boku no Hero Academia Theme/Behind the Scenes Resources
-Boku no Hero Academia Theme/Temp/
-Boku no Hero Academia Theme/Mockup.psd
+Tilt Theme/Inspiration/
+Tilt Theme/Behind the Scenes Resources
+Tilt Theme/Temp/
+Tilt Theme/Mockup.psd
 Log Horizon Theme/
 Clarity Theme/Mod - *.txt
