--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 */Resources.txt
+WIP_*/
 Clarity Theme/Images/
+Clarity Theme/Mod - *.txt
 Tilt Theme/Inspiration/
 Tilt Theme/Behind the Scenes Resources
 Tilt Theme/Temp/
 Tilt Theme/Mockup.psd
 Log Horizon Theme/
-Clarity Theme/Mod - *.txt
