--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+*-NFP-*
+*-WIP-*
 */Resources.txt
-WIP_*/
 Clarity Theme/Images/
-Clarity Theme/Mod - *.txt
 Tilt Theme/Inspiration/
 Tilt Theme/Behind the Scenes Resources
 Tilt Theme/Temp/
