--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 *-NFP-*
 *-WIP-*
 */Resources.txt
-Clarity Theme/Images/
-Tilt Theme/Inspiration/
-Tilt Theme/Behind the Scenes Resources
-Tilt Theme/Temp/
-Tilt Theme/Mockup.psd
-Log Horizon Theme/
+*/Mockup.psd
