--- a/.github/ISSUE_TEMPLATE/help.yaml
+++ b/.github/ISSUE_TEMPLATE/help.yaml
@@ -11,7 +11,7 @@ body:
     attributes:
       label: Which theme are you using?
       description: If you select other, be sure to explain in the next field what theme you are using.
-      multiple: false
+      multiple: true
       options:
         - 9anime
         - Agile
